--- a/pages/application/application.html
+++ b/pages/application/application.html
@@ -30,10 +30,9 @@
       $("#datepicker").datepicker();
     });
   </script>
-</head>
-</head>
 
-<body id="page-top"><a class="menu-toggle rounded" href="#"><i class="fa fa-bars"></i></a>
+
+<body id="apply"><a class="menu-toggle rounded" href="#"><i class="fa fa-bars"></i></a>
   <nav class="navbar navbar-light navbar-expand" id="sidebar-wrapper">
     <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler d-none" data-bs-target="#"></button>
       <div class="collapse navbar-collapse">
@@ -52,29 +51,30 @@
     </div>
   </nav>
 
-  <div class="row">
+  <div class="row p-5">
 
-    <head></head>
+
     <div class="col-sm-8 mt-5">
       <div class="d-md-flex align-items-center justify-content-center  pb-3">
         <div class="content mb-md-0 mb-5">
-          <p class="h2">The Simple online home Loan</p>
+          <p class="h2">Loan Application</p>
           <p class="line"></p>
-          <p class="p2">Financial uncertainty is hard on employees and causes even.</p>
-          <div class="btn btn-primary">Our Service</div>
+          <p class="p2">Interest is 2.5% per day and the late payment fee is 5% per day. Is that ok?</p>
+          <div class="btn btn-primary">More Info</div>
         </div>
       </div>
     </div>
     <div class="col-sm-4 mt-5">
-      <div class="card">
+      <div class="card shadow-lg">
         <form>
           <div class="d-flex flex-column align-items-center">
             <p class="fs-4 fw-bold m-0 mt-4">How much you want?</p> <span class="text-muted">We provide online
               instant cash loans.</span> <span class="line my-3"></span>
           </div>
           <div class="row p-0">
-            <div class="col-12 p-0 px-4 "> <span class="text-uppercase text-muted">amount you want :</span><input
-                type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;"> </div>
+            <div class="col-12 p-0 px-4 "> <span class="text-uppercase text-muted">amount you want :<input type="text"
+                  id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;" class="col-sm-2"></span>
+            </div>
             <div class="col-12 p-0 px-4 mt-2">
 
 
