--- a/pages/application/application.html
+++ b/pages/application/application.html
@@ -32,7 +32,7 @@
   </script>
 
 
-<body id="apply"><a class="menu-toggle rounded" href="#"><i class="fa fa-bars"></i></a>
+<body id="applypage"><a class="menu-toggle rounded" href="#"><i class="fa fa-bars"></i></a>
   <nav class="navbar navbar-light navbar-expand" id="sidebar-wrapper">
     <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler d-none" data-bs-target="#"></button>
       <div class="collapse navbar-collapse">
