--- a/pages/application/login.html
+++ b/pages/application/login.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="/resources/demos/style.css">
 </head>
 
-<body id="login"><a class="menu-toggle rounded" href="#"><i class="fa fa-bars"></i></a>
+<body id="loginpage"><a class="menu-toggle rounded" href="#"><i class="fa fa-bars"></i></a>
   <nav class="navbar navbar-light navbar-expand" id="sidebar-wrapper">
     <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler d-none" data-bs-target="#"></button>
       <div class="collapse navbar-collapse">
@@ -45,18 +45,18 @@
           <h5 class="card-title">Loan Application</h5>
           <p class="card-text">
           <form method="post">
-            <div class="form-group">
+            <div class="form-group mt-3">
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                 placeholder="Enter email">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                 else.</small>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
-            <div class="form-group form-check">
+            <div class="form-group form-check my-2">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
