--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 </head>
 
-<body id="page-top"><a class="menu-toggle rounded" href="#"><i class="fa fa-bars"></i></a>
+<body id="homepage"><a class="menu-toggle rounded" href="#"><i class="fa fa-bars"></i></a>
   <nav class="navbar navbar-light navbar-expand" id="sidebar-wrapper">
     <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler d-none" data-bs-target="#"></button>
       <div class="collapse navbar-collapse">
@@ -32,7 +32,7 @@
       </div>
     </div>
   </nav>
-  <header class="d-flex masthead " id="header">
+  <header class="d-flex masthead ">
     <div class="row">
       <div class="col-sm-8">
         <div class="container my-auto text-center">
