--- a/pages/application/login.html
+++ b/pages/application/login.html
@@ -7,7 +7,7 @@
     content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no, viewport-fit=cover">
   <title>Home Page</title>
   <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/site.css" />
+  <link rel="stylesheet" href="/assets/css/site.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic&amp;display=swap">
   <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
