--- a/pages/application/application.html
+++ b/pages/application/application.html
@@ -53,7 +53,7 @@
     </div>
   </nav>
 
-  <div class="row p-5">
+  <div class="row p-3">
 
 
     <div class="col-sm-8 mt-5">
@@ -66,37 +66,104 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-4 mt-5">
-      <div class="card shadow-lg">
-        <form>
-          <div class="d-flex flex-column align-items-center">
-            <p class="fs-4 fw-bold m-0 mt-4">How much you want?</p> <span class="text-muted">We provide online
-              instant cash loans.</span> <span class="line my-3"></span>
-          </div>
-          <div class="row p-0">
-            <div class="col-12 p-0 px-4 "> <span class="text-uppercase text-muted">amount you want :<input type="text"
-                  id="amount" readonly class="col-sm-2 amountcolor"></span>
-            </div>
-            <div class="col-12 p-0 px-4 mt-2">
+    <div class="col-sm-4 mt-4">
+      <div id="msform">
+        <ul id="progressbar">
+          <li class="active">Amount</li>
+          <li>Personal Details</li>
+          <li>Proof Documents</li>
+        </ul>
+
+        <div class="card shadow-lg">
+          <form class="msform">
+            <fieldset>
+              <div class="d-flex flex-column align-items-center">
+                <p class="fs-4 fw-bold m-0 mt-4">How much you want?</p> <span class="text-muted">We provide online
+                  instant cash loans.</span> <span class="line my-3"></span>
+              </div>
+              <div class="row p-0">
+                <div class="col-12 p-0 px-4 "> <span class="text-uppercase text-muted">amount you want :<input
+                      type="text" id="amount" readonly class="col-sm-2 amountcolor"></span>
+                </div>
+                <div class="col-12 p-0 px-4 mt-2">
 
 
-              <div id="slider-range"></div>
-            </div>
-            <div class="col-12 p-0 px-4 mt-4"> <span class="text-uppercase text-muted">Payback Date</span> </div>
-            <div class="col-12 p-0 px-4 "> <input type="text" id="datepicker" class="form-control"> </div>
-            <div class="col-12 p-0 px-4 ">
-              <div class=" my-3"> <span class="text-muted text-uppercase">amount
-                  pay per day:</span> <span class="c-g ps-1"> <input type="text" id="money" class="amountcolor col-sm-3"
-                    readonly /></span> </div>
-            </div>
-            <div class="col-12 p-0 px-4">
-              <div class="btn btn-primary w-100">apply now</div>
-              <div class="text-muted text-center mb-4 mt-3">We provide online instant cash loans</div>
-            </div>
-          </div>
-        </form>
+                  <div id="slider-range"></div>
+                </div>
+                <div class="col-12 p-0 px-4 mt-4"> <span class="text-uppercase text-muted">Payback Date</span> </div>
+                <div class="col-12 p-0 px-4 "> <input type="text" id="datepicker" class="form-control"> </div>
+                <div class="col-12 p-0 px-4 ">
+                  <div class=" my-3"> <span class="text-muted text-uppercase">amount
+                      pay per day:</span> <span class="c-g ps-1"> <input type="text" id="money"
+                        class="amountcolor col-sm-3" readonly /></span> </div>
+                </div>
+                <div class="col-12 p-0 px-4 text-center">
+                  <input name="next" value="Next" class="btn next btn-primary" type="button" />
+                  <div class="text-muted text-center mb-4 mt-3">We provide online instant cash loans</div>
+                </div>
+              </div>
+            </fieldset>
+            <fieldset>
+
+              <div class="col-12 p-0 px-4 mt-4"> <span class="text-uppercase text-muted">Name</span> </div>
+              <div class="col-12 p-0 px-4 "> <input type="text" id="name" class="form-control"
+                  placeholder="Enter name e.g'Jane Doe'"></div>
+
+
+              <div class="col-12 p-0 px-4 mt-4"> <span class="text-uppercase text-muted">ID Number</span> </div>
+              <div class="col-12 p-0 px-4 "> <input type="text" id="idnumber" class="form-control"
+                  placeholder="00-0000000G00"></div>
+
+              <div class="col-12 p-0 px-4 mt-4"> <span class="text-uppercase text-muted">Address</span> </div>
+              <div class="col-12 p-0 px-4 "> <input type="text" id="address" class="form-control"
+                  placeholder="Enter address e.g'123 Main St'"></div>
+
+              <div class="col-12 p-0 px-4 mt-4"> <span class="text-uppercase text-muted">Parent/Next of keen Name</span>
+              </div>
+              <div class="col-12 p-0 px-4 "> <input type="text" id="parentname" class="form-control"
+                  placeholder="Enter parent/next of keen name e.g'Jane Doe'"></div>
+              <div class="col-12 p-0 px-4 mt-4"> <span class="text-uppercase text-muted">Parent/Next of keen
+                  Number</span> </div>
+              <div class="col-12 p-0 px-4 "> <input type="text" id="parentnumber" class="form-control"
+                  placeholder="Enter parent/next of keen number e.g'077-000-000'" /></div>
+
+
+              <div class="col-12 p-0 px-4 text-center my-3">
+                <input type="button" name="previous" class="previous btn btn-primary" value="Previous" />
+                <input name="next" value="Next" class="btn next btn-primary" type="button" />
+                <div class="text-muted text-center mb-4 mt-3">We provide online instant cash loans</div>
+              </div>
+            </fieldset>
+            <fieldset>
+              <div class="col-12 p-0 px-4 mt-4 ">
+                <span class="text-uppercase text-muted">Passport Copy</span>
+              </div>
+              <div class="col-12 p-0 px-4 ">
+                <input type="file" id="passport" class="form-control">
+              </div>
+
+              <div class="col-12 p-0 px-4 mt-4 ">
+                <span class="text-uppercase text-muted">Proof of Residence Copy</span>
+              </div>
+              <div class="col-12 p-0 px-4 ">
+                <input type="file" id="residencecopy" class="form-control">
+              </div>
+              <div class="col-12 p-0 px-4 mt-4 ">
+                <span class="text-uppercase text-muted">Proof of Income Copy</span>
+              </div>
+              <div class="col-12 p-0 px-4 ">
+                <input type="file" id="visacopy" class="form-control">
+              </div>
+
+              <div class="col-12 p-0 text-center mt-3">
+                <button type="submit" class="btn btn-primary ">Submit</button>
+              </div>
+
+            </fieldset>
+
+          </form>
+        </div>
       </div>
-
     </div>
   </div>
 
@@ -105,6 +172,7 @@
   </div>
   <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="/assets/js/stylish-portfolio.js"></script>
+  <script src="/assets/js/site.js"></script>
 </body>
 
 </html>
