--- a/pages/application/application.html
+++ b/pages/application/application.html
@@ -32,7 +32,7 @@
       $("#money").val("$" + ($("#slider-range").slider("values", 0) * 0.025).toFixed(2));
     });
   </script>
-
+</head>
 
 <body id="applypage"><a class="menu-toggle rounded" href="#"><i class="fa fa-bars"></i></a>
   <nav class="navbar navbar-light navbar-expand" id="sidebar-wrapper">
