--- a/pages/application/login.html
+++ b/pages/application/login.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </nav>
-  <div class="row p-5">
+  <div class="row p-5 mx-3">
 
 
     <div class="col-sm-8 mt-5">
@@ -68,6 +68,7 @@
 
     </div>
   </div>
+
 
 
 
