--- a/pages/userdashboard.html
+++ b/pages/userdashboard.html
@@ -211,11 +211,8 @@
                   
                       
                     <td>
-                      <div class="d-flex align-items-center">
-                        <span class="mr-2">60%</span>
-                        <div>
-                          <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100</div>
-                        </div>
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
                       </div>
                     </td>
                     <td class="text-right">
